<resources>
    <string name="app_name">Recycling</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="logo_de_la_app">Logo de la app</string>
    <string name="bienvenido_a_recycling">Bienvenido a Recycling</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="email">Email</string>
    <string name="volver">Volver</string>
    <string name="entrar">Entrar</string>
    <string name="title_home">Home</string>
    <string name="premios">Premios</string>
    <string name="ajustes">Ajustes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuevo_reciclaje">Nuevo reciclaje</string>
    <string name="perfil">Perfil</string>
    <string name="usuario">Usuario</string>
    <string name="puntos">Puntos:</string>
    <string name="borrar_reciclado">Borrar reciclado</string>
    <string name="proximamente">Proximamente</string>
    <string name="borrar_cuenta">Borrar cuenta</string>
    <string name="cambiar_email">Cambiar Email</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="correo">Correo:</string>
    <string name="mostrar_datos">Mostrar datos</string>
    <string name="contrase_a2">Contraseña:</string>
    <string name="nuevo_contrase_a">Nuevo contraseña</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="cambiar">Cambiar</string>
    <string name="nuevo_email">Nuevo email</string>
    <string name="mapa">Mapa</string>
</resources>